@@ -12,6 +12,8 @@ Version 2.2.0 - SVN
  - Fix 'NONINTERACTIVE' undefined (Closes: #1814594, thanks Maks Verver)
  - Moved beep system call to separate function in lib.misc.{c,php}.
  - Switch to UTF-8 for output (Thijs)
+ - Represent balloon colours with a symbol rather than filling the background,
+   making the scoreboard less cacophonic. (Thijs)
 
 Version 2.1.1 - SVN
 -------------------
